--- a/index.css
+++ b/index.css
@@ -7,6 +7,9 @@ body {
 .grid-container {
   height: 100vh;
   width: 100vw;
+  display: grid;
+  grid-template: 1fr 1fr 1fr 1fr / 1fr 1fr 1fr;
+  grid-gap: 5px;
   /* your properties here */
 }
 
@@ -14,5 +17,26 @@ body {
   background-color: grey;
   border: 1px solid black;
 }
-
+.bigItem{
+/*  grid-column-start: 1;
+grid-column-end: 3;
+grid-row-start: 1;
+grid-row-end: 3;
+}
+grid-row-start: 2;
+ grid-row-end: 7;
+ grid-column-start: 2;
+ grid-column-end: 4;*/
 /* add the .bigItem class */
+/*grid-row-start: 2;
+grid-row-end: 4;
+grid-column-start: 2;
+grid-column-end: 4;*/
+/*
+grid-row: 2 / 4;
+grid-column: 2 / 4;*/
+/* grid-area: 2 / 2 / 4 / 4;*/
+ grid-area: 2 / 2 / 4 / 4;
+   height: 50%;
+   width: 50%;
+   justify-self: center;}
