--- a/index.css
+++ b/index.css
@@ -8,6 +8,9 @@ body {
   height: 100vh;
   width: 100vw;
   /* your properties here */
+  display: grid;
+  grid-template: repeat(4, 1fr) / repeat(3, 1fr);
+  grid-gap: 5px
 }
 
 .grid-item {
@@ -16,3 +19,7 @@ body {
 }
 
 /* add the .bigItem class */
+.bigItem{
+  grid-area:  2 / 2 / 4 / 4;
+  justify-self: center;
+} 
